--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.7.1",
+    "@nuxtjs/leaflet": "^1.3.2",
     "@tailwindcss/vite": "^4.1.14",
     "@vueuse/core": "^13.9.0",
     "better-sqlite3": "^12.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet-geosearch": "^4.2.2",
     "lucide-vue-next": "^0.544.0",
     "nuxt": "^4.1.2",
     "reka-ui": "^2.5.1",
