--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -69,6 +69,7 @@ rich-toolkit==0.15.1
 rignore==0.7.0
 rsa==4.9.1
 safetensors==0.6.2
+seaborn==0.13.2
 sentry-sdk==2.39.0
 setuptools==80.9.0
 shellingham==1.5.4
