--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt-alt/markdown-it": "^0.0.2",
     "@nuxt/content": "^3.7.1",
     "@nuxtjs/leaflet": "^1.3.2",
     "@tailwindcss/vite": "^4.1.14",
@@ -19,6 +20,7 @@
     "clsx": "^2.1.1",
     "leaflet-geosearch": "^4.2.2",
     "lucide-vue-next": "^0.544.0",
+    "markdown-it": "^14.1.0",
     "nuxt": "^4.1.2",
     "reka-ui": "^2.5.1",
     "shadcn-nuxt": "^2.2.0",
